deploy/kubernetes/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-container
  template:
    metadata:
      labels:
        app: django-container
    spec:
      containers:
        - name: django-web
          image: ac22:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
