deploy/kubernetes/django/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
  - host: node-7.hse.rvc
    http:
      paths:
      - path: /api/
        backend:
          serviceName: django-service
          servicePort: 8000
      - path: /admin/
        backend:
            serviceName: django-service
            servicePort: 8000
      - path: /static/
        backend:
            serviceName: django-service
            servicePort: 8000
      - path: /
        backend:
          serviceName: django-service
          servicePort: 80
